--- a/BankingMangerB2/BankingMangerB2.vcxproj.filters
+++ b/BankingMangerB2/BankingMangerB2.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClCompile Include="deposit.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SearchU.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ChangeInfo.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SignIn.h">
@@ -78,6 +84,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="deposit.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SearchU.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ChangeInfo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
